Fix: alignment & overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: center;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
